<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ModalLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    tools:ignore="HardcodedText">

	<com.paypal.messages.RoundedWebView
		android:id="@+id/ModalWebView"
		android:layout_width="match_parent"
		android:layout_height="match_parent" />

	<TextView
		android:id="@+id/ModalErrorText"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginStart="5dp"
		android:layout_marginTop="5dp"
		android:layout_marginEnd="5dp"
		android:layout_marginBottom="5dp"
		android:gravity="center_vertical|center_horizontal"
		android:text="Error fetching Learn More content."
		android:textAlignment="center"
		android:visibility="invisible"
		tools:visibility="visible" />

	<ProgressBar
		android:id="@+id/progress_bar"
		android:layout_width="80dip"
		android:layout_height="80dip"
		android:layout_centerInParent="true"
		android:layout_gravity="center"
		android:elevation="1dp"
		android:indeterminate="true"
		android:indeterminateDrawable="@drawable/custom_progress"
		android:visibility="visible" />

	<ImageButton
		android:id="@+id/ModalCloseButton"
		android:layout_width="64dip"
		android:layout_height="64dip"
		android:layout_alignParentTop="true"
		android:layout_alignParentEnd="true"
		android:layout_marginTop="12dip"
		android:layout_marginEnd="12dip"
		android:background="@drawable/ic_close"
		android:scaleType="center"
		android:contentDescription="PayPal learn more modal close" />
</RelativeLayout>
